Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA10.10.222663.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222663.yaml
@@ -1,6 +1,8 @@
 command_id: DA10.10.222663
 test_cases:
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -16,6 +18,8 @@ test_cases:
     18DAF1102700000010000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -31,6 +35,8 @@ test_cases:
     18DAF1102700007F10000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -46,6 +52,8 @@ test_cases:
     18DAF1102700025610000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 1
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -61,6 +69,8 @@ test_cases:
     18DAF110270001F310000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -76,6 +86,8 @@ test_cases:
     18DAF1102700000B10000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 2
@@ -91,6 +103,8 @@ test_cases:
     18DAF1102700018510000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -106,6 +120,8 @@ test_cases:
     18DAF110270001C410000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -121,6 +137,8 @@ test_cases:
     18DAF110270001A610000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -136,6 +154,8 @@ test_cases:
     18DAF1102700025410000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -151,6 +171,8 @@ test_cases:
     18DAF1102700015F10000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 2
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -166,6 +188,8 @@ test_cases:
     18DAF110270001AE10000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -181,6 +205,8 @@ test_cases:
     18DAF1102700021A10000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 1
     HONDA_MIS_3: 0
@@ -196,6 +222,8 @@ test_cases:
     18DAF1102700021B10000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 2
     HONDA_MIS_3: 0
@@ -211,6 +239,8 @@ test_cases:
     18DAF1102700024C10000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -226,6 +256,8 @@ test_cases:
     18DAF1102700011C10000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 3
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -241,6 +273,8 @@ test_cases:
     18DAF1102703024F10000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 2
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -256,6 +290,8 @@ test_cases:
     18DAF1102700022910000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -271,6 +307,8 @@ test_cases:
     18DAF1102700008B10000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -286,6 +324,8 @@ test_cases:
     18DAF1102700020A10000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
