--- a/tests/test_cases/2017/commands/DA1E.1E.223083.yaml
+++ b/tests/test_cases/2017/commands/DA1E.1E.223083.yaml
@@ -1,7 +1,7 @@
 command_id: DA1E.1E.223083
 test_cases:
 - expected_values:
-    HONDA_ATF: 28
+    HONDA_ATF_T_V2: 28
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000000
@@ -10,7 +10,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 30
+    HONDA_ATF_T_V2: 30
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000000
@@ -19,7 +19,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 36
+    HONDA_ATF_T_V2: 36
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000000
@@ -28,7 +28,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 39
+    HONDA_ATF_T_V2: 39
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000000
@@ -37,7 +37,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 70
+    HONDA_ATF_T_V2: 70
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000000
@@ -47,7 +47,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 71
+    HONDA_ATF_T_V2: 71
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000000
@@ -56,7 +56,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 71
+    HONDA_ATF_T_V2: 71
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000000
@@ -65,7 +65,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 77
+    HONDA_ATF_T_V2: 77
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000000
@@ -74,7 +74,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 43
+    HONDA_ATF_T_V2: 43
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000004
@@ -83,7 +83,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 66
+    HONDA_ATF_T_V2: 66
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000004
@@ -93,7 +93,7 @@ test_cases:
     18DAF11E2500000000005555
     18DAF1602400000000000000
 - expected_values:
-    HONDA_ATF: 20
+    HONDA_ATF_T_V2: 20
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000004
@@ -102,7 +102,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 68
+    HONDA_ATF_T_V2: 68
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000004
@@ -112,7 +112,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 70
+    HONDA_ATF_T_V2: 70
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000000000004
@@ -122,7 +122,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 74
+    HONDA_ATF_T_V2: 74
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000500050008
@@ -131,7 +131,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 72
+    HONDA_ATF_T_V2: 72
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000800080007
@@ -140,7 +140,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 67
+    HONDA_ATF_T_V2: 67
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000A000A000F
@@ -149,7 +149,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 75
+    HONDA_ATF_T_V2: 75
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103000F000F0009
@@ -158,7 +158,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 53
+    HONDA_ATF_T_V2: 53
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103001300130013
@@ -168,7 +168,7 @@ test_cases:
     18DAF11E2500000000005555
     18DAF1602700000000000000
 - expected_values:
-    HONDA_ATF: 61
+    HONDA_ATF_T_V2: 61
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E210300150015001D
@@ -177,7 +177,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 69
+    HONDA_ATF_T_V2: 69
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103001900190019
@@ -187,7 +187,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 66
+    HONDA_ATF_T_V2: 66
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103002C002C002C
@@ -196,7 +196,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 56
+    HONDA_ATF_T_V2: 56
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103002D002D002D
@@ -205,7 +205,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 63
+    HONDA_ATF_T_V2: 63
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103002F002F002F
@@ -215,7 +215,7 @@ test_cases:
     18DAF12624221F1F1D000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 70
+    HONDA_ATF_T_V2: 70
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103004600460046
@@ -225,7 +225,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 56
+    HONDA_ATF_T_V2: 56
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103005200520044
@@ -235,7 +235,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 58
+    HONDA_ATF_T_V2: 58
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103005B005B005A
@@ -244,7 +244,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 58
+    HONDA_ATF_T_V2: 58
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103007000700070
@@ -254,7 +254,7 @@ test_cases:
     18DAF11E2500000000005555
     18DAF1602500000000000000
 - expected_values:
-    HONDA_ATF: 87
+    HONDA_ATF_T_V2: 87
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103007100710074
@@ -263,7 +263,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 67
+    HONDA_ATF_T_V2: 67
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103007500750075
@@ -273,7 +273,7 @@ test_cases:
     18DAF11E2500000000005555
     18DAF1262700000000000000
 - expected_values:
-    HONDA_ATF: 68
+    HONDA_ATF_T_V2: 68
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103007900790079
@@ -283,7 +283,7 @@ test_cases:
     18DAF11E2500000000005555
     18DAF1602700000000000000
 - expected_values:
-    HONDA_ATF: 66
+    HONDA_ATF_T_V2: 66
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103007E007E007D
@@ -293,7 +293,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 70
+    HONDA_ATF_T_V2: 70
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103007E007E007E
@@ -303,7 +303,7 @@ test_cases:
     18DAF1602400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 83
+    HONDA_ATF_T_V2: 83
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E21030086008600A1
@@ -312,7 +312,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 65
+    HONDA_ATF_T_V2: 65
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103009000900090
@@ -321,7 +321,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 67
+    HONDA_ATF_T_V2: 67
   response: |-
     18DAF11E1027623083FFFF80
     18DAF11E2103009400940094
@@ -330,7 +330,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 69
+    HONDA_ATF_T_V2: 69
   response: |-
     18DAF11E1027623083FFFF80
     18DAF1262300000000000000
@@ -340,7 +340,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 67
+    HONDA_ATF_T_V2: 67
   response: |-
     18DAF11E1027623083FFFF80
     18DAF1262500000000000000
@@ -350,7 +350,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 69
+    HONDA_ATF_T_V2: 69
   response: |-
     18DAF11E1027623083FFFF80
     18DAF1602357000000000000
@@ -360,7 +360,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 77
+    HONDA_ATF_T_V2: 77
   response: |-
     18DAF11E1027623083FFFF80
     18DAF1602359000000000000
@@ -370,7 +370,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 61
+    HONDA_ATF_T_V2: 61
   response: |-
     18DAF11E1027623083FFFF80
     18DAF1602400000000000000
@@ -380,7 +380,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 49
+    HONDA_ATF_T_V2: 49
   response: |-
     18DAF11E1027623083FFFF80
     18DAF1602800005555555555
@@ -390,7 +390,7 @@ test_cases:
     18DAF11E2400000000000000
     18DAF11E2500000000005555
 - expected_values:
-    HONDA_ATF: 68
+    HONDA_ATF_T_V2: 68
   response: |-
     18DAF1262429262524000000
     18DAF11E1027623083FFFF80
