--- a/tests/test_cases/2017/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2017/commands/DA26.26.226001.yaml
@@ -5,6 +5,10 @@ test_cases:
     HONDA_TP_FR: 200
     HONDA_TP_RL: 203
     HONDA_TP_RR: 235
+    HONDA_TT_FL: 21
+    HONDA_TT_FR: 21
+    HONDA_TT_RL: 20
+    HONDA_TT_RR: 21
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000C8
@@ -20,6 +24,10 @@ test_cases:
     HONDA_TP_FR: 209
     HONDA_TP_RL: 209
     HONDA_TP_RR: 242
+    HONDA_TT_FL: 25
+    HONDA_TT_FR: 26
+    HONDA_TT_RL: 23
+    HONDA_TT_RR: 23
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000D1
@@ -35,6 +43,10 @@ test_cases:
     HONDA_TP_FR: 218
     HONDA_TP_RL: 216
     HONDA_TP_RR: 249
+    HONDA_TT_FL: 35
+    HONDA_TT_FR: 36
+    HONDA_TT_RL: 29
+    HONDA_TT_RR: 29
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000DA
@@ -50,6 +62,10 @@ test_cases:
     HONDA_TP_FR: 236
     HONDA_TP_RL: 235
     HONDA_TP_RR: 229
+    HONDA_TT_FL: 43
+    HONDA_TT_FR: 44
+    HONDA_TT_RL: 39
+    HONDA_TT_RR: 40
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000EC
@@ -65,6 +81,10 @@ test_cases:
     HONDA_TP_FR: 239
     HONDA_TP_RL: 236
     HONDA_TP_RR: 231
+    HONDA_TT_FL: 44
+    HONDA_TT_FR: 45
+    HONDA_TT_RL: 40
+    HONDA_TT_RR: 41
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000EF
@@ -80,6 +100,10 @@ test_cases:
     HONDA_TP_FR: 239
     HONDA_TP_RL: 240
     HONDA_TP_RR: 232
+    HONDA_TT_FL: 44
+    HONDA_TT_FR: 45
+    HONDA_TT_RL: 41
+    HONDA_TT_RR: 42
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000EF
@@ -95,6 +119,10 @@ test_cases:
     HONDA_TP_FR: 242
     HONDA_TP_RL: 236
     HONDA_TP_RR: 231
+    HONDA_TT_FL: 45
+    HONDA_TT_FR: 48
+    HONDA_TT_RL: 40
+    HONDA_TT_RR: 42
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000F2
@@ -110,6 +138,10 @@ test_cases:
     HONDA_TP_FR: 247
     HONDA_TP_RL: 243
     HONDA_TP_RR: 238
+    HONDA_TT_FL: 41
+    HONDA_TT_FR: 43
+    HONDA_TT_RL: 38
+    HONDA_TT_RR: 38
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000F7
@@ -125,6 +157,10 @@ test_cases:
     HONDA_TP_FR: 262
     HONDA_TP_RL: 254
     HONDA_TP_RR: 249
+    HONDA_TT_FL: 43
+    HONDA_TT_FR: 45
+    HONDA_TT_RL: 37
+    HONDA_TT_RR: 38
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F00000000106
