--- a/tests/test_cases/2025/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2025/commands/DA26.26.226001.yaml
@@ -5,6 +5,10 @@ test_cases:
     HONDA_TP_FR: 213
     HONDA_TP_RL: 214
     HONDA_TP_RR: 211
+    HONDA_TT_FL: 14
+    HONDA_TT_FR: 11
+    HONDA_TT_RL: 13
+    HONDA_TT_RR: 11
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000D5
@@ -20,6 +24,10 @@ test_cases:
     HONDA_TP_FR: 214
     HONDA_TP_RL: 213
     HONDA_TP_RR: 211
+    HONDA_TT_FL: 13
+    HONDA_TT_FR: 14
+    HONDA_TT_RL: 12
+    HONDA_TT_RR: 12
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000D6
