--- a/tests/test_cases/2017/command_support.yaml
+++ b/tests/test_cases/2017/command_support.yaml
@@ -8,12 +8,12 @@ supported_commands_by_ecu:
   - DA10.10.222660|fc=1:HONDA_ODO,HONDA_RUNTM
   - DA10.10.222661:HONDA_FUELAIR_CAR
   - DA10.10.222662:HONDA_KNOCK_CONTROL,HONDA_KNOCK_CTRL,HONDA_VTC_DUTY
-  - DA10.10.222663:HONDA_MIS_1,HONDA_MIS_2,HONDA_MIS_3,HONDA_MIS_4
+  - DA10.10.222663:HONDA_MISFIRE_5,HONDA_MISFIRE_6,HONDA_MIS_1,HONDA_MIS_2,HONDA_MIS_3,HONDA_MIS_4
   "DA1E":
-  - DA1E.1E.223083:HONDA_ATF
+  - DA1E.1E.223083:HONDA_ATF_T_V2
   - DA1E.1E.223086:HONDA_GEAR_V2
   "DA26":
-  - DA26.26.226001:HONDA_TP_FL,HONDA_TP_FR,HONDA_TP_RL,HONDA_TP_RR
+  - DA26.26.226001:HONDA_TP_FL,HONDA_TP_FR,HONDA_TP_RL,HONDA_TP_RR,HONDA_TT_FL,HONDA_TT_FR,HONDA_TT_RL,HONDA_TT_RR
   "DA60":
   - DA60.60.227028|fc=1:HONDA_AAT
   - DA60.60.227029:HONDA_FLV
