--- a/tests/test_cases/2023/commands/DA10.10.222663.yaml
+++ b/tests/test_cases/2023/commands/DA10.10.222663.yaml
@@ -1,6 +1,8 @@
 command_id: DA10.10.222663
 test_cases:
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -16,6 +18,8 @@ test_cases:
     18DAF1102700000D00000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -31,6 +35,8 @@ test_cases:
     18DAF1102700016F00000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -46,6 +52,8 @@ test_cases:
     18DAF1102700002000000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -61,6 +69,8 @@ test_cases:
     18DAF1102700009800000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -76,6 +86,8 @@ test_cases:
     18DAF1102700025300000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 1
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -91,6 +103,8 @@ test_cases:
     18DAF110270000FF00000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -106,6 +120,8 @@ test_cases:
     18DAF1102700003400000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 1
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 1
     HONDA_MIS_3: 1
@@ -121,6 +137,8 @@ test_cases:
     18DAF1102700013E00000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -136,6 +154,8 @@ test_cases:
     18DAF1102700024A00000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 1
     HONDA_MIS_1: 1
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -151,6 +171,8 @@ test_cases:
     18DAF110270100CF00000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 2
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -166,6 +188,8 @@ test_cases:
     18DAF1102702023800000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 1
     HONDA_MIS_3: 0
@@ -181,6 +205,8 @@ test_cases:
     18DAF110270000D400000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -196,6 +222,8 @@ test_cases:
     18DAF1102700025800000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -211,6 +239,8 @@ test_cases:
     18DAF110270000D300000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -226,6 +256,8 @@ test_cases:
     18DAF1102700014200000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 2
     HONDA_MIS_3: 0
@@ -241,6 +273,8 @@ test_cases:
     18DAF1102700022200000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 2
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -256,6 +290,8 @@ test_cases:
     18DAF1102700022800000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -271,6 +307,8 @@ test_cases:
     18DAF110270001B900000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -286,6 +324,8 @@ test_cases:
     18DAF1102700023300000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 1
+    HONDA_MISFIRE_6: 1
     HONDA_MIS_1: 0
     HONDA_MIS_2: 1
     HONDA_MIS_3: 1
@@ -301,6 +341,8 @@ test_cases:
     18DAF1102701012700000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 1
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 3
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
@@ -316,6 +358,8 @@ test_cases:
     18DAF110270000EB00000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_MISFIRE_5: 0
+    HONDA_MISFIRE_6: 0
     HONDA_MIS_1: 0
     HONDA_MIS_2: 0
     HONDA_MIS_3: 0
