--- a/tests/test_cases/2017/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2017/commands/DA26.26.226001.yaml
@@ -115,39 +115,77 @@ test_cases:
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
-    HONDA_TP_FL: 246
-    HONDA_TP_FR: 247
-    HONDA_TP_RL: 243
-    HONDA_TP_RR: 238
-    HONDA_TT_FL: 41
-    HONDA_TT_FR: 43
-    HONDA_TT_RL: 38
-    HONDA_TT_RR: 38
+    HONDA_TP_FL: 255
+    HONDA_TP_FR: 257
+    HONDA_TP_RL: 253
+    HONDA_TP_RR: 254
+    HONDA_TT_FL: 28
+    HONDA_TT_FR: 29
+    HONDA_TT_RL: 25
+    HONDA_TT_RR: 26
   response: |-
     18DAF126103B6260010000FF
-    18DAF1262100F000000000F7
-    18DAF1262200F600EE00F300
+    18DAF1262100F00000000101
+    18DAF1262200FF00FE00FD00
     18DAF1262300000000000000
-    18DAF126242B292626000000
+    18DAF126241D1C1A19000000
     18DAF1262500000000000000
     18DAF1262600000000000000
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
-    HONDA_TP_FL: 262
-    HONDA_TP_FR: 262
-    HONDA_TP_RL: 254
-    HONDA_TP_RR: 249
-    HONDA_TT_FL: 43
-    HONDA_TT_FR: 45
-    HONDA_TT_RL: 37
-    HONDA_TT_RR: 38
+    HONDA_TP_FL: 257
+    HONDA_TP_FR: 258
+    HONDA_TP_RL: 253
+    HONDA_TP_RR: 254
+    HONDA_TT_FL: 29
+    HONDA_TT_FR: 30
+    HONDA_TT_RL: 26
+    HONDA_TT_RR: 27
   response: |-
     18DAF126103B6260010000FF
-    18DAF1262100F00000000106
-    18DAF12622010600F900FE00
+    18DAF1262100F00000000102
+    18DAF12622010100FE00FD00
     18DAF1262300000000000000
-    18DAF126242D2B2625000000
+    18DAF126241E1D1B1A000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 258
+    HONDA_TP_FR: 258
+    HONDA_TP_RL: 255
+    HONDA_TP_RR: 257
+    HONDA_TT_FL: 31
+    HONDA_TT_FR: 32
+    HONDA_TT_RL: 28
+    HONDA_TT_RR: 28
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F00000000102
+    18DAF126220102010100FF00
+    18DAF1262300000000000000
+    18DAF12624201F1C1C000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 259
+    HONDA_TP_FR: 261
+    HONDA_TP_RL: 257
+    HONDA_TP_RR: 257
+    HONDA_TT_FL: 32
+    HONDA_TT_FR: 33
+    HONDA_TT_RL: 28
+    HONDA_TT_RR: 29
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F00000000105
+    18DAF1262201030101010100
+    18DAF1262300000000000000
+    18DAF1262421201D1C000000
     18DAF1262500000000000000
     18DAF1262600000000000000
     18DAF1262700000000000000
