--- a/tests/test_cases/2017/command_support.yaml
+++ b/tests/test_cases/2017/command_support.yaml
@@ -66,6 +66,8 @@ supported_commands_by_ecu:
   - DB33.0103:FUELSYS1,FUELSYS2
   - DB33.0104:LOAD_PCT
   - DB33.0105:ECT
+  - DB33.0106:SHRTFT1
+  - DB33.0108:SHRTFT2,SHRTFT4
   - DB33.010D:VSS
   - DB33.0110:MAF
   - DB33.011C:OBDSUP
