--- a/tests/test_cases/2017/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2017/commands/DA26.26.226001.yaml
@@ -58,6 +58,25 @@ test_cases:
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
+    HONDA_TP_FL: 209
+    HONDA_TP_FR: 211
+    HONDA_TP_RL: 209
+    HONDA_TP_RR: 211
+    HONDA_TT_FL: 3
+    HONDA_TT_FR: 2
+    HONDA_TT_RL: 3
+    HONDA_TT_RR: 2
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000D3
+    18DAF1262200D100D300D100
+    18DAF1262300000000000000
+    18DAF1262402030203000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
     HONDA_TP_FL: 222
     HONDA_TP_FR: 221
     HONDA_TP_RL: 221
