Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA10.10.222611.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222611.yaml
@@ -378,6 +378,19 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_AIRGAS_RATIO: 14.09908
+    HONDA_FUEL_AIR_RATIO: 0
+  response: |-
+    18DAF1101039622611000FFF
+    18DAF11021FFFC007FB57AC4
+    18DAF1102280797F1E013D00
+    18DAF11023897FB57AC48079
+    18DAF110247F1E013D00897F
+    18DAF11025BB7B257F797F1E
+    18DAF110260249008B3C3C00
+    18DAF1102700000000000000
+    18DAF1102800005555555555
+- expected_values:
     HONDA_AIRGAS_RATIO: 14.70157
     HONDA_FUEL_AIR_RATIO: 0
   response: |-
