--- a/tests/test_cases/2017/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2017/commands/DA26.26.226001.yaml
@@ -135,38 +135,57 @@ test_cases:
     18DAF1262800000000555555
 - expected_values:
     HONDA_TP_FL: 255
-    HONDA_TP_FR: 257
-    HONDA_TP_RL: 253
-    HONDA_TP_RR: 254
-    HONDA_TT_FL: 28
-    HONDA_TT_FR: 29
-    HONDA_TT_RL: 25
-    HONDA_TT_RR: 26
+    HONDA_TP_FR: 255
+    HONDA_TP_RL: 249
+    HONDA_TP_RR: 249
+    HONDA_TT_FL: 27
+    HONDA_TT_FR: 28
+    HONDA_TT_RL: 22
+    HONDA_TT_RR: 22
   response: |-
     18DAF126103B6260010000FF
-    18DAF1262100F00000000101
-    18DAF1262200FF00FE00FD00
+    18DAF1262100F000000000FF
+    18DAF1262200FF00F900F900
     18DAF1262300000000000000
-    18DAF126241D1C1A19000000
+    18DAF126241C1B1616000000
     18DAF1262500000000000000
     18DAF1262600000000000000
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
     HONDA_TP_FL: 257
-    HONDA_TP_FR: 258
-    HONDA_TP_RL: 253
-    HONDA_TP_RR: 254
-    HONDA_TT_FL: 29
-    HONDA_TT_FR: 30
-    HONDA_TT_RL: 26
-    HONDA_TT_RR: 27
+    HONDA_TP_FR: 255
+    HONDA_TP_RL: 251
+    HONDA_TP_RR: 251
+    HONDA_TT_FL: 28
+    HONDA_TT_FR: 29
+    HONDA_TT_RL: 23
+    HONDA_TT_RR: 23
   response: |-
     18DAF126103B6260010000FF
-    18DAF1262100F00000000102
-    18DAF12622010100FE00FD00
+    18DAF1262100F000000000FF
+    18DAF12622010100FB00FB00
     18DAF1262300000000000000
-    18DAF126241E1D1B1A000000
+    18DAF126241D1C1717000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 255
+    HONDA_TP_FR: 257
+    HONDA_TP_RL: 250
+    HONDA_TP_RR: 249
+    HONDA_TT_FL: 27
+    HONDA_TT_FR: 28
+    HONDA_TT_RL: 22
+    HONDA_TT_RR: 22
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F00000000101
+    18DAF1262200FF00F900FA00
+    18DAF1262300000000000000
+    18DAF126241C1B1616000000
     18DAF1262500000000000000
     18DAF1262600000000000000
     18DAF1262700000000000000
@@ -191,20 +210,20 @@ test_cases:
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
-    HONDA_TP_FL: 262
+    HONDA_TP_FL: 259
     HONDA_TP_FR: 259
     HONDA_TP_RL: 257
-    HONDA_TP_RR: 254
-    HONDA_TT_FL: 33
-    HONDA_TT_FR: 34
+    HONDA_TP_RR: 257
+    HONDA_TT_FL: 32
+    HONDA_TT_FR: 33
     HONDA_TT_RL: 29
-    HONDA_TT_RR: 27
+    HONDA_TT_RR: 29
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F00000000103
-    18DAF12622010600FE010100
+    18DAF1262201030101010100
     18DAF1262300000000000000
-    18DAF1262422211B1D000000
+    18DAF1262421201D1D000000
     18DAF1262500000000000000
     18DAF1262600000000000000
     18DAF1262700000000000000
