Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA10.10.222610.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222610.yaml
@@ -460,6 +460,19 @@ test_cases:
     HONDA_GENERATOR: 0
   response: |-
     18DAF1101039622610FFFDBF
+    18DAF110217DE7FC14382307
+    18DAF11022237D963F382395
+    18DAF11023652126006C8E00
+    18DAF1102400009564647F00
+    18DAF110250F0841025A0093
+    18DAF1102641002200005D00
+    18DAF11027D116440A84FF9C
+    18DAF1102800005555555555
+- expected_values:
+    HONDA_AC_CLUTCH: 0
+    HONDA_GENERATOR: 0
+  response: |-
+    18DAF1101039622610FFFDBF
     18DAF110217DE7FC151C2D15
     18DAF11022217F7B4A533693
     18DAF1102364346E00C48100
