--- a/tests/test_cases/2017/commands/DB33.0144.yaml
+++ b/tests/test_cases/2017/commands/DB33.0144.yaml
@@ -10,5 +10,10 @@ test_cases:
     EQ_RAT: 0.98439
   response: 18DAF1100441447E00
 - expected_values:
+    EQ_RAT: 1.00746
+  response: |-
+    18DAF11004414480F4
+    18DAF1602500000000000000
+- expected_values:
     EQ_RAT: 1.99
   response: 18DAF110044144FFFF
