Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA10.10.222610.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222610.yaml
@@ -369,6 +369,19 @@ test_cases:
     HONDA_GENERATOR: 0
   response: |-
     18DAF1101039622610FFFDBF
+    18DAF110217DE7FC0D0C2307
+    18DAF110224463B4322E1C93
+    18DAF1102364003800898D00
+    18DAF11024016D2F0000FF00
+    18DAF110250F083F022A00C4
+    18DAF110262D003100006200
+    18DAF11027EE162608350030
+    18DAF1102800005555555555
+- expected_values:
+    HONDA_AC_CLUTCH: 0
+    HONDA_GENERATOR: 0
+  response: |-
+    18DAF1101039622610FFFDBF
     18DAF110217DE7FC0D80260B
     18DAF110226A519F3B372293
     18DAF1102364015000988E00
