--- a/tests/test_cases/2017/commands/DA1E.1E.223086.yaml
+++ b/tests/test_cases/2017/commands/DA1E.1E.223086.yaml
@@ -157,6 +157,15 @@ test_cases:
     18DAF11E24F0800104000000
     18DAF11E2500000000005555
 - expected_values:
+    HONDA_GEAR_V2: P
+  response: |-
+    18DAF11E1027623086FFFFFF
+    18DAF11E210301F401F40BA3
+    18DAF11E2201F401F41A0A00
+    18DAF11E230100000000F080
+    18DAF11E24F0800107000000
+    18DAF11E2500000000005555
+- expected_values:
     HONDA_GEAR_V2: D8
   response: |-
     18DAF11E1027623086FFFFFF
