Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA10.10.222660|fc=1.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222660|fc=1.yaml
@@ -274,6 +274,19 @@ test_cases:
     18DAF110271901D300C30000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_ODO: 117480
+    HONDA_RUNTM: 970
+  response: |-
+    18DAF1101039622660801FFF
+    18DAF11021F3F7F000000000
+    18DAF1102200000000000000
+    18DAF110230000008A1A0001
+    18DAF1102400040040408300
+    18DAF110250102C700000C08
+    18DAF110260ADA0D730001CA
+    18DAF11027E803CA02AB0000
+    18DAF1102800005555555555
+- expected_values:
     HONDA_ODO: 331065
     HONDA_RUNTM: 4084
   response: |-
