--- a/tests/test_cases/2017/commands/DA10.10.222662.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222662.yaml
@@ -309,6 +309,20 @@ test_cases:
     18DAF110271F0000000A7656
     18DAF1102800005555555555
 - expected_values:
+    HONDA_KNOCK_CONTROL: 0.58824
+    HONDA_KNOCK_CTRL: 0.58824
+    HONDA_VTC_DUTY: 0
+  response: |-
+    18DAF11010396226622CF030
+    18DAF11021007FFC00000000
+    18DAF110224B3A00001AF71B
+    18DAF1102309FFFF00000000
+    18DAF1102401010000000000
+    18DAF1102500000000000000
+    18DAF11026002E2F033701F4
+    18DAF110271F05006808982A
+    18DAF1102800005555555555
+- expected_values:
     HONDA_KNOCK_CONTROL: 0.6902
     HONDA_KNOCK_CTRL: 0.6902
     HONDA_VTC_DUTY: 0
