--- a/tests/test_cases/2017/commands/DB33.0104.yaml
+++ b/tests/test_cases/2017/commands/DB33.0104.yaml
@@ -9,6 +9,11 @@ test_cases:
     18DAF11003410400
     18DAF11E03410400
 - expected_values:
+    LOAD_PCT: 81.96078
+  response: |-
+    18DAF110034104D1
+    18DAF11E034104D1
+- expected_values:
     LOAD_PCT: 83.92157
   response: |-
     18DAF110034104D6
