Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA10.10.222611.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222611.yaml
@@ -521,6 +521,32 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_AIRGAS_RATIO: 14.33191
+    HONDA_FUEL_AIR_RATIO: 0
+  response: |-
+    18DAF1101039622611000FFF
+    18DAF11021FFFC00800B7CCB
+    18DAF110227D807D4E020700
+    18DAF110236E800B7CCB7D80
+    18DAF110247D4E0207006E7F
+    18DAF11025F37D287F7F8137
+    18DAF11026021D00693C3C00
+    18DAF1102700000000000000
+    18DAF1102800005555555555
+- expected_values:
+    HONDA_AIRGAS_RATIO: 14.96536
+    HONDA_FUEL_AIR_RATIO: 0
+  response: |-
+    18DAF1101039622611000FFF
+    18DAF11021FFFC008010824F
+    18DAF110227F808006020F00
+    18DAF110236B8010824F7F80
+    18DAF110247F56020F006B80
+    18DAF11025058193807F7ECA
+    18DAF11026021E00683C3C00
+    18DAF1102700000000000000
+    18DAF1102800005555555555
+- expected_values:
     HONDA_AIRGAS_RATIO: 29.4
     HONDA_FUEL_AIR_RATIO: 0
   response: |-
