Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DB33.0105.yaml
+++ b/tests/test_cases/2017/commands/DB33.0105.yaml
@@ -1,6 +1,9 @@
 command_id: DB33.0105
 test_cases:
 - expected_values:
+    ECT: 81
+  response: 18DAF10E03410579
+- expected_values:
     ECT: -40
   response: 18DAF11003410500
 - expected_values:
