--- a/tests/test_cases/2017/commands/DB33.0110.yaml
+++ b/tests/test_cases/2017/commands/DB33.0110.yaml
@@ -1,6 +1,9 @@
 command_id: DB33.0110
 test_cases:
 - expected_values:
+    MAF: 3.92
+  response: 18DAF10E0441100188
+- expected_values:
     MAF: 0
   response: 18DAF1100441100000
 - expected_values:
