--- a/tests/test_cases/2017/commands/DB33.0104.yaml
+++ b/tests/test_cases/2017/commands/DB33.0104.yaml
@@ -1,6 +1,9 @@
 command_id: DB33.0104
 test_cases:
 - expected_values:
+    LOAD_PCT: 9.80392
+  response: 18DAF10E03410419
+- expected_values:
     LOAD_PCT: 0
   response: 18DAF11003410400
 - expected_values:
