--- a/tests/test_cases/2025/commands/DB33.0134.yaml
+++ b/tests/test_cases/2025/commands/DB33.0134.yaml
@@ -1,22 +1,30 @@
 command_id: DB33.0134
 test_cases:
 - expected_values:
-    LAMBDA11_CURRENT: 0.86136
-    O2S11_CURRENT: -0.4375
-  response: 18DAF1100641346E417F90
+    LAMBDA11_CURRENT: 0.7475
+    O2S11_CURRENT: -0.92188
+  response: 18DAF1100641345FAE7F14
+- expected_values:
+    LAMBDA11_CURRENT: 0.9454
+    O2S11_CURRENT: -0.15234
+  response: 18DAF11006413479037FD9
+- expected_values:
+    LAMBDA11_CURRENT: 0.98431
+    O2S11_CURRENT: -0.04297
+  response: 18DAF1100641347DFE7FF5
 - expected_values:
     LAMBDA11_CURRENT: 0.99884
     O2S11_CURRENT: -0.00391
   response: 18DAF1100641347FDA7FFF
 - expected_values:
-    LAMBDA11_CURRENT: 0.99942
-    O2S11_CURRENT: -0.00391
-  response: 18DAF1100641347FED7FFF
+    LAMBDA11_CURRENT: 1.00018
+    O2S11_CURRENT: 0
+  response: 18DAF11006413480068000
 - expected_values:
-    LAMBDA11_CURRENT: 1.00204
-    O2S11_CURRENT: 0.00391
-  response: 18DAF11006413480438001
+    LAMBDA11_CURRENT: 1.3111
+    O2S11_CURRENT: 0.96875
+  response: 18DAF110064134A7D280F8
 - expected_values:
-    LAMBDA11_CURRENT: 1.25037
-    O2S11_CURRENT: 0.30859
-  response: 18DAF110064134A00C804F
+    LAMBDA11_CURRENT: 1.3111
+    O2S11_CURRENT: 1.15234
+  response: 18DAF110064134A7D28127
