--- a/tests/test_cases/2025/commands/DB33.0144.yaml
+++ b/tests/test_cases/2025/commands/DB33.0144.yaml
@@ -1,11 +1,14 @@
 command_id: DB33.0144
 test_cases:
 - expected_values:
-    EQ_RAT: 0.8527
-  response: 18DAF1100441446D25
+    EQ_RAT: 0.8394
+  response: 18DAF1100441446B71
 - expected_values:
-    EQ_RAT: 0.99995
-  response: 18DAF1100441447FFE
+    EQ_RAT: 0.9453
+  response: 18DAF11004414478FF
 - expected_values:
     EQ_RAT: 1.00005
   response: 18DAF1100441448001
+- expected_values:
+    EQ_RAT: 1.01061
+  response: 18DAF110044144815B
