--- a/tests/test_cases/2017/commands/DB33.0104.yaml
+++ b/tests/test_cases/2017/commands/DB33.0104.yaml
@@ -12,6 +12,12 @@ test_cases:
     18DAF11003410400
     18DAF11E03410400
 - expected_values:
+    LOAD_PCT: 14.11765
+  response: |-
+    18DAF11003410424
+    18DAF11E03410424
+    18DAF1602600000000000000
+- expected_values:
     LOAD_PCT: 89.41176
   response: |-
     18DAF110034104E4
