--- a/tests/test_cases/2025/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2025/commands/DA26.26.226001.yaml
@@ -38,3 +38,155 @@ test_cases:
     18DAF1262600000000000000
     18DAF1262700000000000000
     18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 229
+    HONDA_TP_FR: 229
+    HONDA_TP_RL: 227
+    HONDA_TP_RR: 227
+    HONDA_TT_FL: 6
+    HONDA_TT_FR: 6
+    HONDA_TT_RL: 4
+    HONDA_TT_RR: 4
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000E5
+    18DAF1262200E500E300E300
+    18DAF1262300000000000000
+    18DAF1262406060404000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 229
+    HONDA_TP_FR: 229
+    HONDA_TP_RL: 228
+    HONDA_TP_RR: 229
+    HONDA_TT_FL: 5
+    HONDA_TT_FR: 5
+    HONDA_TT_RL: 5
+    HONDA_TT_RR: 5
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000E5
+    18DAF1262200E500E500E400
+    18DAF1262300000000000000
+    18DAF1262405050505000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 238
+    HONDA_TP_FR: 239
+    HONDA_TP_RL: 233
+    HONDA_TP_RR: 235
+    HONDA_TT_FL: 13
+    HONDA_TT_FR: 12
+    HONDA_TT_RL: 9
+    HONDA_TT_RR: 8
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000EF
+    18DAF1262200EE00EB00E900
+    18DAF1262300000000000000
+    18DAF126240C0D0809000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 242
+    HONDA_TP_FR: 242
+    HONDA_TP_RL: 235
+    HONDA_TP_RR: 238
+    HONDA_TT_FL: 13
+    HONDA_TT_FR: 12
+    HONDA_TT_RL: 10
+    HONDA_TT_RR: 10
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000F2
+    18DAF1262200F200EE00EB00
+    18DAF1262300000000000000
+    18DAF126240C0D0A0A000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 246
+    HONDA_TP_FR: 247
+    HONDA_TP_RL: 240
+    HONDA_TP_RR: 246
+    HONDA_TT_FL: 16
+    HONDA_TT_FR: 16
+    HONDA_TT_RL: 13
+    HONDA_TT_RR: 14
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000F7
+    18DAF1262200F600F600F000
+    18DAF1262300000000000000
+    18DAF1262410100E0D000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 249
+    HONDA_TP_FR: 249
+    HONDA_TP_RL: 243
+    HONDA_TP_RR: 243
+    HONDA_TT_FL: 16
+    HONDA_TT_FR: 17
+    HONDA_TT_RL: 13
+    HONDA_TT_RR: 14
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000F9
+    18DAF1262200F900F300F300
+    18DAF1262300000000000000
+    18DAF1262411100E0D000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 249
+    HONDA_TP_FR: 249
+    HONDA_TP_RL: 243
+    HONDA_TP_RR: 244
+    HONDA_TT_FL: 19
+    HONDA_TT_FR: 18
+    HONDA_TT_RL: 16
+    HONDA_TT_RR: 15
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000F9
+    18DAF1262200F900F400F300
+    18DAF1262300000000000000
+    18DAF1262412130F10000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 250
+    HONDA_TP_FR: 249
+    HONDA_TP_RL: 243
+    HONDA_TP_RR: 246
+    HONDA_TT_FL: 18
+    HONDA_TT_FR: 17
+    HONDA_TT_RL: 15
+    HONDA_TT_RR: 15
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000F9
+    18DAF1262200FA00F600F300
+    18DAF1262300000000000000
+    18DAF1262411120F0F000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
