--- a/tests/test_cases/2017/commands/DB33.0104.yaml
+++ b/tests/test_cases/2017/commands/DB33.0104.yaml
@@ -18,6 +18,11 @@ test_cases:
     18DAF11E03410424
     18DAF1602600000000000000
 - expected_values:
+    LOAD_PCT: 89.01961
+  response: |-
+    18DAF110034104E3
+    18DAF11E034104E3
+- expected_values:
     LOAD_PCT: 89.41176
   response: |-
     18DAF110034104E4
