--- a/tests/test_cases/2017/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2017/commands/DA26.26.226001.yaml
@@ -153,6 +153,25 @@ test_cases:
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
+    HONDA_TP_FL: 217
+    HONDA_TP_FR: 217
+    HONDA_TP_RL: 218
+    HONDA_TP_RR: 218
+    HONDA_TT_FL: 0
+    HONDA_TT_FR: 0
+    HONDA_TT_RL: 0
+    HONDA_TT_RR: 0
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000D9
+    18DAF1262200D900DA00DA00
+    18DAF1262300000000000000
+    18DAF1262400000000000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
     HONDA_TP_FL: 222
     HONDA_TP_FR: 221
     HONDA_TP_RL: 221
