Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA10.10.222610.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222610.yaml
@@ -3,6 +3,14 @@ test_cases:
 - expected_values:
     HONDA_AC_CLUTCH: 0
     HONDA_GENERATOR: 0
+  response: "18 DA F1 10 10 39 62 26 10 FF FD BF \n18 DA F1 10 21 7D E7 FC 1B 40 3F
+    2E \n18 DA F1 10 22 23 7D A7 38 7F 56 95 \n18 DA F1 10 23 65 73 C4 00 97 8F 00
+    \n18 DA F1 10 24 03 1D 4B 1F 1C 70 00 \n18 DA F1 10 25 0F 08 7F 10 B9 00 A7 \n18
+    DA F1 10 26 39 00 B6 00 00 5F 00 \n18 DA F1 10 27 E2 16 62 19 4F 00 77 \n18 DA
+    F1 10 28 00 00 55 55 55 55 55 "
+- expected_values:
+    HONDA_AC_CLUTCH: 0
+    HONDA_GENERATOR: 0
   response: |-
     18DAF1101039622610FFFDBF
     18DAF110217DE7FC00002307
