--- a/tests/test_cases/2017/commands/DA10.10.222611.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222611.yaml
@@ -1,6 +1,14 @@
 command_id: DA10.10.222611
 test_cases:
 - expected_values:
+    HONDA_AIRGAS_RATIO: 14.51719
+    HONDA_FUEL_AIR_RATIO: 0
+  response: "18 DA F1 10 10 39 62 26 11 00 0F FF \n18 DA F1 10 21 FF FC 00 7F F5 7E
+    68 \n18 DA F1 10 22 81 7C 80 79 02 22 00 \n18 DA F1 10 23 6A 7F F5 7E 68 81 7C
+    \n18 DA F1 10 24 80 E4 02 22 00 6A 7F \n18 DA F1 10 25 DA 7C 17 7F 7A 80 79 \n18
+    DA F1 10 26 02 21 00 65 3C 3C 00 \n18 DA F1 10 27 00 00 00 00 00 00 00 \n18 DA
+    F1 10 28 00 00 55 55 55 55 55 "
+- expected_values:
     HONDA_AIRGAS_RATIO: 11.96367
     HONDA_FUEL_AIR_RATIO: 0
   response: |-
@@ -14,6 +22,19 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_AIRGAS_RATIO: 12.19202
+    HONDA_FUEL_AIR_RATIO: 0
+  response: |-
+    18DAF1101039622611000FFF
+    18DAF11021FFFC007E606A29
+    18DAF11022827A6A4F022E00
+    18DAF110236F7E606A29827A
+    18DAF110246A73022E006F7E
+    18DAF11025876AFB80786A73
+    18DAF11026022F006B3C3C00
+    18DAF1102700000000000000
+    18DAF1102800005555555555
+- expected_values:
     HONDA_AIRGAS_RATIO: 12.10902
     HONDA_FUEL_AIR_RATIO: 0
   response: |-
@@ -24,19 +45,6 @@ test_cases:
     18DAF1102475570104005F7E
     18DAF11025876974807775C8
     18DAF110260102005C3C3C00
-    18DAF1102700000000000000
-    18DAF1102800005555555555
-- expected_values:
-    HONDA_AIRGAS_RATIO: 11.99014
-    HONDA_FUEL_AIR_RATIO: 0
-  response: |-
-    18DAF1101039622611000FFF
-    18DAF11021FFFC007EA06867
-    18DAF1102280787581011100
-    18DAF11023667EA068678078
-    18DAF11024755A011100667E
-    18DAF110256E670480777581
-    18DAF11026010300643C3C00
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
