Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA10.10.222611.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222611.yaml
@@ -256,6 +256,19 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_AIRGAS_RATIO: 16.02947
+    HONDA_FUEL_AIR_RATIO: 0
+  response: |-
+    18DAF1101039622611000FFF
+    18DAF11021FFFC007F288B93
+    18DAF11022807B8000011D00
+    18DAF110235A7F288B93807B
+    18DAF1102475AF011D005A7F
+    18DAF110256897E280788000
+    18DAF110260106005B3C3C00
+    18DAF1102700000000000000
+    18DAF1102800005555555555
+- expected_values:
     HONDA_AIRGAS_RATIO: 13.04932
     HONDA_FUEL_AIR_RATIO: 0
   response: |-
