--- a/tests/test_cases/2025/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2025/commands/DA26.26.226001.yaml
@@ -39,6 +39,25 @@ test_cases:
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
+    HONDA_TP_FL: 227
+    HONDA_TP_FR: 229
+    HONDA_TP_RL: 222
+    HONDA_TP_RR: 225
+    HONDA_TT_FL: 4
+    HONDA_TT_FR: 6
+    HONDA_TT_RL: 1
+    HONDA_TT_RR: 3
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000E5
+    18DAF1262200E300E100DE00
+    18DAF1262300000000000000
+    18DAF1262406040301000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
     HONDA_TP_FL: 232
     HONDA_TP_FR: 231
     HONDA_TP_RL: 229
@@ -77,20 +96,20 @@ test_cases:
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
-    HONDA_TP_FL: 243
+    HONDA_TP_FL: 240
     HONDA_TP_FR: 240
-    HONDA_TP_RL: 236
-    HONDA_TP_RR: 235
-    HONDA_TT_FL: 13
-    HONDA_TT_FR: 12
-    HONDA_TT_RL: 9
+    HONDA_TP_RL: 235
+    HONDA_TP_RR: 236
+    HONDA_TT_FL: 11
+    HONDA_TT_FR: 10
+    HONDA_TT_RL: 8
     HONDA_TT_RR: 8
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000F0
-    18DAF1262200F300EB00EC00
+    18DAF1262200F000EC00EB00
     18DAF1262300000000000000
-    18DAF126240C0D0809000000
+    18DAF126240A0B0808000000
     18DAF1262500000000000000
     18DAF1262600000000000000
     18DAF1262700000000000000
