Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DA10.10.222662.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222662.yaml
@@ -253,6 +253,20 @@ test_cases:
     18DAF110271F010000089837
     18DAF1102800005555555555
 - expected_values:
+    HONDA_KNOCK_CONTROL: 0.51765
+    HONDA_KNOCK_CTRL: 0.51765
+    HONDA_VTC_DUTY: 0
+  response: |-
+    18DAF11010396226622CF030
+    18DAF11021007FFC00000000
+    18DAF11022423E00001F701F
+    18DAF1102378FFFF00000000
+    18DAF1102401010000000000
+    18DAF1102500000000000000
+    18DAF11026002F29033C010F
+    18DAF110271F05000008982A
+    18DAF1102800005555555555
+- expected_values:
     HONDA_KNOCK_CONTROL: 0.53333
     HONDA_KNOCK_CTRL: 0.53333
     HONDA_VTC_DUTY: 0
