--- a/tests/test_cases/2025/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2025/commands/DA26.26.226001.yaml
@@ -1,6 +1,44 @@
 command_id: DA26.26.226001
 test_cases:
 - expected_values:
+    HONDA_TP_FL: 200
+    HONDA_TP_FR: 202
+    HONDA_TP_RL: 998
+    HONDA_TP_RR: 998
+    HONDA_TT_FL: -19
+    HONDA_TT_FR: -18
+    HONDA_TT_RL: 0
+    HONDA_TT_RR: 0
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000CA
+    18DAF1262200C803E603E600
+    18DAF1262300000000000000
+    18DAF12624EEED0000000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 202
+    HONDA_TP_FR: 202
+    HONDA_TP_RL: 998
+    HONDA_TP_RR: 998
+    HONDA_TT_FL: -18
+    HONDA_TT_FR: -18
+    HONDA_TT_RL: 0
+    HONDA_TT_RR: 0
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000CA
+    18DAF1262200CA03E603E600
+    18DAF1262300000000000000
+    18DAF12624EEEE0000000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
     HONDA_TP_FL: 217
     HONDA_TP_FR: 213
     HONDA_TP_RL: 214
