Update command data for Honda/Pilot

--- a/tests/test_cases/2025/commands/DA10.10.222660|fc=1.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222660|fc=1.yaml
@@ -378,6 +378,19 @@ test_cases:
     18DAF110275300C000040000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_ODO: 18008
+    HONDA_RUNTM: 448
+  response: |-
+    18DAF1101039622660801FFF
+    18DAF11021F3FFF000000000
+    18DAF1102200000000000000
+    18DAF11023000039D03B0101
+    18DAF1102400040040408200
+    18DAF110250102BE00000B95
+    18DAF110260A88FFFF550046
+    18DAF110275801C001C10000
+    18DAF1102800005555555555
+- expected_values:
     HONDA_ODO: 34464
     HONDA_RUNTM: 27
   response: |-
