--- a/tests/test_cases/2025/commands/DB33.012F.yaml
+++ b/tests/test_cases/2025/commands/DB33.012F.yaml
@@ -4,5 +4,8 @@ test_cases:
     FLI: 10.19608
   response: 18DAF11003412F1A
 - expected_values:
+    FLI: 15.29412
+  response: 18DAF11003412F27
+- expected_values:
     FLI: 34.11765
   response: 18DAF11003412F57
