--- a/tests/test_cases/2025/commands/DB33.012F.yaml
+++ b/tests/test_cases/2025/commands/DB33.012F.yaml
@@ -1,11 +1,23 @@
 command_id: DB33.012F
 test_cases:
 - expected_values:
+    FLI: 7.45098
+  response: 18DAF11003412F13
+- expected_values:
     FLI: 10.19608
   response: 18DAF11003412F1A
 - expected_values:
     FLI: 15.29412
   response: 18DAF11003412F27
 - expected_values:
+    FLI: 17.64706
+  response: 18DAF11003412F2D
+- expected_values:
+    FLI: 21.56863
+  response: 18DAF11003412F37
+- expected_values:
     FLI: 34.11765
   response: 18DAF11003412F57
+- expected_values:
+    FLI: 93.72549
+  response: 18DAF11003412FEF
