--- a/tests/test_cases/2025/commands/DB33.0104.yaml
+++ b/tests/test_cases/2025/commands/DB33.0104.yaml
@@ -16,6 +16,12 @@ test_cases:
     18DAF1100341043F
     18DAF11E03410436
 - expected_values:
+    LOAD_PCT: 47.45098
+  response: |-
+    18DAF1EF03410479
+    18DAF110034104A0
+    18DAF11E03410479
+- expected_values:
     LOAD_PCT: 58.03922
   response: |-
     18DAF1EF03410494
