--- a/tests/test_cases/2025/commands/DB33.012F.yaml
+++ b/tests/test_cases/2025/commands/DB33.012F.yaml
@@ -19,5 +19,8 @@ test_cases:
     FLI: 34.11765
   response: 18DAF11003412F57
 - expected_values:
+    FLI: 87.05882
+  response: 18DAF11003412FDE
+- expected_values:
     FLI: 93.72549
   response: 18DAF11003412FEF
