Update command data for Honda/Pilot

--- a/tests/test_cases/2025/commands/DA10.10.222610.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222610.yaml
@@ -57,6 +57,19 @@ test_cases:
     HONDA_GENERATOR: 0
   response: |-
     18DAF1101039622610FFDDB0
+    18DAF110216DE7FC0A682204
+    18DAF11022217F8A44342000
+    18DAF1102363003D00899100
+    18DAF1102401430000000000
+    18DAF110250F0000017F003A
+    18DAF110266A002A008C5100
+    18DAF11027A816AB096B004B
+    18DAF1102800005555555555
+- expected_values:
+    HONDA_AC_CLUTCH: 0
+    HONDA_GENERATOR: 0
+  response: |-
+    18DAF1101039622610FFDDB0
     18DAF110216DE7FC0A6C2204
     18DAF11022257BB930342000
     18DAF11023620039008C9200
