--- a/tests/test_cases/2025/commands/DB33.012F.yaml
+++ b/tests/test_cases/2025/commands/DB33.012F.yaml
@@ -25,5 +25,8 @@ test_cases:
     FLI: 90.98039
   response: 18DAF11003412FE8
 - expected_values:
+    FLI: 92.15686
+  response: 18DAF11003412FEB
+- expected_values:
     FLI: 93.72549
   response: 18DAF11003412FEF
