--- a/tests/test_cases/2025/commands/DA10.10.222610.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222610.yaml
@@ -300,6 +300,19 @@ test_cases:
     18DAF11027C715FF110AFFD9
     18DAF1102800005555555555
 - expected_values:
+    HONDA_AC_CLUTCH: 0
+    HONDA_GENERATOR: 0
+  response: |-
+    18DAF1101039622610FFDDB0
+    18DAF110216DE7FC0DB32507
+    18DAF11022724FCD26352100
+    18DAF1102363083F00948F00
+    18DAF1102401830000000000
+    18DAF110250F0000026400D5
+    18DAF11026250033008CB702
+    18DAF110273A163609A80063
+    18DAF1102800005555555555
+- expected_values:
     HONDA_AC_CLUTCH: 1
     HONDA_GENERATOR: 0
   response: |-
