--- a/tests/test_cases/2025/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2025/commands/DA26.26.226001.yaml
@@ -58,6 +58,44 @@ test_cases:
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
+    HONDA_TP_FL: 227
+    HONDA_TP_FR: 220
+    HONDA_TP_RL: 228
+    HONDA_TP_RR: 221
+    HONDA_TT_FL: 3
+    HONDA_TT_FR: -2
+    HONDA_TT_RL: 5
+    HONDA_TT_RR: -1
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000DC
+    18DAF1262200E300DD00E400
+    18DAF1262300000000000000
+    18DAF12624FE03FF05000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 227
+    HONDA_TP_FR: 224
+    HONDA_TP_RL: 228
+    HONDA_TP_RR: 221
+    HONDA_TT_FL: 3
+    HONDA_TT_FR: -2
+    HONDA_TT_RL: 5
+    HONDA_TT_RR: -1
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000E0
+    18DAF1262200E300DD00E400
+    18DAF1262300000000000000
+    18DAF12624FE03FF05000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
     HONDA_TP_FL: 224
     HONDA_TP_FR: 225
     HONDA_TP_RL: 221
@@ -72,6 +110,25 @@ test_cases:
     18DAF1262200E000DD00DD00
     18DAF1262300000000000000
     18DAF12624FDFDFDFD000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 229
+    HONDA_TP_FR: 227
+    HONDA_TP_RL: 229
+    HONDA_TP_RR: 224
+    HONDA_TT_FL: 3
+    HONDA_TT_FR: 0
+    HONDA_TT_RL: 5
+    HONDA_TT_RR: 0
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000E3
+    18DAF1262200E500E000E500
+    18DAF1262300000000000000
+    18DAF1262400030005000000
     18DAF1262500000000000000
     18DAF1262600000000000000
     18DAF1262700000000000000
