Update command data for Honda/Pilot

--- a/tests/test_cases/2025/commands/DA10.10.222610.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222610.yaml
@@ -378,6 +378,19 @@ test_cases:
     18DAF11027FA168209D30064
     18DAF1102800005555555555
 - expected_values:
+    HONDA_AC_CLUTCH: 0
+    HONDA_GENERATOR: 0
+  response: |-
+    18DAF1101039622610FFDDB0
+    18DAF110216DE7FC1037290B
+    18DAF110225A59D024432C00
+    18DAF1102365003100748F00
+    18DAF11024014D0000000000
+    18DAF110250F0000042600E5
+    18DAF110261A0049008C6300
+    18DAF11027F016590CC0FFB5
+    18DAF1102800005555555555
+- expected_values:
     HONDA_AC_CLUTCH: 1
     HONDA_GENERATOR: 0
   response: |-
