--- a/tests/test_cases/2025/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2025/commands/DA26.26.226001.yaml
@@ -61,6 +61,25 @@ test_cases:
     HONDA_TP_FL: 225
     HONDA_TP_FR: 224
     HONDA_TP_RL: 221
+    HONDA_TP_RR: 220
+    HONDA_TT_FL: -4
+    HONDA_TT_FR: -5
+    HONDA_TT_RL: -6
+    HONDA_TT_RR: -7
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000000E0
+    18DAF1262200E100DC00DD00
+    18DAF1262300000000000000
+    18DAF12624FBFCF9FA000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 225
+    HONDA_TP_FR: 224
+    HONDA_TP_RL: 221
     HONDA_TP_RR: 221
     HONDA_TT_FL: -1
     HONDA_TT_FR: -1
