Update command data for Honda/Pilot

--- a/tests/test_cases/2025/commands/DA10.10.222660|fc=1.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222660|fc=1.yaml
@@ -365,6 +365,19 @@ test_cases:
     18DAF11027D10590074A0000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_ODO: 18198
+    HONDA_RUNTM: 907
+  response: |-
+    18DAF1101039622660801FFF
+    18DAF11021F3FFF000000000
+    18DAF1102200000000000000
+    18DAF1102300003A8D3B0101
+    18DAF1102400040040008200
+    18DAF110250102B300000B21
+    18DAF1102608AFFFFF510047
+    18DAF1102716038B000C0000
+    18DAF1102800005555555555
+- expected_values:
     HONDA_ODO: 18197
     HONDA_RUNTM: 407
   response: |-
