--- a/tests/test_cases/2025/commands/DB33.0134.yaml
+++ b/tests/test_cases/2025/commands/DB33.0134.yaml
@@ -9,6 +9,10 @@ test_cases:
     O2S11_CURRENT: -0.02344
   response: 18DAF1100641347EFF7FFA
 - expected_values:
+    LAMBDA11_CURRENT: 0.99219
+    O2S11_CURRENT: -0.02344
+  response: 18DAF1100641347F007FFA
+- expected_values:
     LAMBDA11_CURRENT: 0.99847
     O2S11_CURRENT: -0.00391
   response: 18DAF1100641347FCE7FFF
@@ -18,8 +22,8 @@ test_cases:
   response: 18DAF11006413480008000
 - expected_values:
     LAMBDA11_CURRENT: 1.3111
-    O2S11_CURRENT: 0.55078
-  response: 18DAF110064134A7D2808D
+    O2S11_CURRENT: 0.48438
+  response: 18DAF110064134A7D2807C
 - expected_values:
     LAMBDA11_CURRENT: 1.3111
     O2S11_CURRENT: 1.15234
