--- a/tests/test_cases/2025/commands/DA26.26.226001.yaml
+++ b/tests/test_cases/2025/commands/DA26.26.226001.yaml
@@ -58,20 +58,20 @@ test_cases:
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
-    HONDA_TP_FL: 225
+    HONDA_TP_FL: 222
     HONDA_TP_FR: 224
-    HONDA_TP_RL: 221
+    HONDA_TP_RL: 218
     HONDA_TP_RR: 220
     HONDA_TT_FL: -4
     HONDA_TT_FR: -5
-    HONDA_TT_RL: -6
-    HONDA_TT_RR: -7
+    HONDA_TT_RL: -7
+    HONDA_TT_RR: -6
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000E0
-    18DAF1262200E100DC00DD00
+    18DAF1262200DE00DC00DA00
     18DAF1262300000000000000
-    18DAF12624FBFCF9FA000000
+    18DAF12624FBFCFAF9000000
     18DAF1262500000000000000
     18DAF1262600000000000000
     18DAF1262700000000000000
@@ -115,20 +115,20 @@ test_cases:
     18DAF1262700000000000000
     18DAF1262800000000555555
 - expected_values:
-    HONDA_TP_FL: 228
+    HONDA_TP_FL: 227
     HONDA_TP_FR: 225
     HONDA_TP_RL: 221
-    HONDA_TP_RR: 221
+    HONDA_TP_RR: 222
     HONDA_TT_FL: 0
-    HONDA_TT_FR: 0
+    HONDA_TT_FR: -1
     HONDA_TT_RL: -3
-    HONDA_TT_RR: -2
+    HONDA_TT_RR: -4
   response: |-
     18DAF126103B6260010000FF
     18DAF1262100F000000000E1
-    18DAF1262200E400DD00DD00
+    18DAF1262200E300DE00DD00
     18DAF1262300000000000000
-    18DAF126240000FEFD000000
+    18DAF12624FF00FCFD000000
     18DAF1262500000000000000
     18DAF1262600000000000000
     18DAF1262700000000000000
@@ -243,6 +243,25 @@ test_cases:
     18DAF1262200C700C700C700
     18DAF1262300000000000000
     18DAF1262400ECEDEC000000
+    18DAF1262500000000000000
+    18DAF1262600000000000000
+    18DAF1262700000000000000
+    18DAF1262800000000555555
+- expected_values:
+    HONDA_TP_FL: 998
+    HONDA_TP_FR: 998
+    HONDA_TP_RL: 998
+    HONDA_TP_RR: 998
+    HONDA_TT_FL: 0
+    HONDA_TT_FR: 0
+    HONDA_TT_RL: 0
+    HONDA_TT_RR: 0
+  response: |-
+    18DAF126103B6260010000FF
+    18DAF1262100F000000003E6
+    18DAF1262203E603E603E600
+    18DAF1262300000000000000
+    18DAF1262400000000000000
     18DAF1262500000000000000
     18DAF1262600000000000000
     18DAF1262700000000000000
