Update command data for Honda/Pilot

--- a/tests/test_cases/2017/commands/DB33.0105.yaml
+++ b/tests/test_cases/2017/commands/DB33.0105.yaml
@@ -12,6 +12,12 @@ test_cases:
     18DAF11003410545
     18DAF11E03410545
 - expected_values:
+    ECT: 82
+  response: |-
+    18DAF1100341057A
+    18DAF11E0341057A
+    18DAF1602500000000000000
+- expected_values:
     ECT: 85
   response: |-
     18DAF1100341057D
