--- a/tests/test_cases/2025/commands/DA10.10.222662.yaml
+++ b/tests/test_cases/2025/commands/DA10.10.222662.yaml
@@ -283,6 +283,20 @@ test_cases:
 - expected_values:
     HONDA_KNOCK_CONTROL: 0
     HONDA_KNOCK_CTRL: 0
+    HONDA_VTC_DUTY: 0
+  response: |-
+    18DAF110103962266220F033
+    18DAF110217079FF00000000
+    18DAF1102200000000187F18
+    18DAF110237F000000000000
+    18DAF1102401010000002800
+    18DAF1102520000000000000
+    18DAF11026001C19FF680000
+    18DAF1102713000000043718
+    18DAF1102800005555555555
+- expected_values:
+    HONDA_KNOCK_CONTROL: 0
+    HONDA_KNOCK_CTRL: 0
     HONDA_VTC_DUTY: 47.84314
   response: |-
     18DAF110103962266220F033
