--- a/tests/test_cases/2025/commands/DB33.0104.yaml
+++ b/tests/test_cases/2025/commands/DB33.0104.yaml
@@ -22,6 +22,12 @@ test_cases:
     18DAF11E0341043F
     18DAF1100341043F
 - expected_values:
+    LOAD_PCT: 87.84314
+  response: |-
+    18DAF1EF034104E0
+    18DAF110034104E0
+    18DAF11E034104E0
+- expected_values:
     LOAD_PCT: 89.80392
   response: |-
     18DAF1EF034104E5
