--- a/tests/test_cases/2017/commands/DA10.10.222611.yaml
+++ b/tests/test_cases/2017/commands/DA10.10.222611.yaml
@@ -204,6 +204,19 @@ test_cases:
     18DAF1102700000000000000
     18DAF1102800005555555555
 - expected_values:
+    HONDA_AIRGAS_RATIO: 12.83847
+    HONDA_FUEL_AIR_RATIO: 0
+  response: |-
+    18DAF1101039622611000FFF
+    18DAF11021FFFC007F066FCA
+    18DAF11022808075B3020400
+    18DAF11023687F066FCA8080
+    18DAF110247586020400687F
+    18DAF11025046FBC7F7F75B3
+    18DAF11026020200673C3C00
+    18DAF1102700000000000000
+    18DAF1102800005555555555
+- expected_values:
     HONDA_AIRGAS_RATIO: 12.87436
     HONDA_FUEL_AIR_RATIO: 0
   response: |-
